--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script src="node_modules/systemjs/dist/system.src.js"></script>
 	<script src="system.config.js"></script>
 	<script>
-	System.import('app').catch(function(err) { console.log(err); });
+	System.import('app').catch(function(err) { console.error(err); });
 	</script>
 	<style type="text/css">
 		body{
