Enquiry listing implemented
Signed-off-by: Ramesh Mhetre <mhetreramesh@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>My Angular 2 APP</title>
 	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="app/styles/bootstrap.min.css">
 
 	<!-- JS -->
 	<!-- Load Dependencies -->
@@ -25,7 +25,7 @@
 </head>
 <body class="container">
 
-		<my-app>Loading...</my-app>
+		<chat-container>Loading...</chat-container>
 
 </body>
 </html>
